@@ -27,6 +27,7 @@ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #include "Util/FileSystem.hpp"
 #include "Util/Exception.hpp"
 #include "Util/UtilInterface.hpp"
+#include "Util/Endian.hpp"
 #include "PackedSurface.hpp"
 #include "Surface.hpp"
 #include "Span.hpp"
@@ -164,8 +165,8 @@ void PackedSurface::pack(const Surface &source)
                 // Now write the data into the chunk.
 
                 SpanHead *span = (SpanHead *)(packedDataChunk + curByteOffset);
-                span->x1 = spanX1;
-                span->len = spanLen;
+                span->x1 = htol16(spanX1);
+                span->len = htol16(spanLen);
                 memcpy(span + 1, &rowPtr[spanX1], spanLen * sizeof(PIX));
                 curByteOffset = newSize;
             }
@@ -321,9 +322,9 @@ void PackedSurface::blt(Surface &dest, int destX, int destY) const
             for (;;) {
                 if (rowData >= rowEnd) goto nextRow;
                 span = (SpanHead *)rowData;
-                x1 = span->x1;
-                x2 = x1 + span->len;
-                rowData += (sizeof(*span) + span->len*sizeof(PIX) + 3) & ~3;
+                x1 = ltoh16(span->x1);
+                x2 = x1 + ltoh16(span->len);
+                rowData += (sizeof(*span) + ltoh16(span->len)*sizeof(PIX) + 3) & ~3;
                 if (x2 > srcMin.x) break;
             }
 
@@ -356,14 +357,14 @@ void PackedSurface::blt(Surface &dest, int destX, int destY) const
 
                 if (rowData >= rowEnd) goto nextRow;
                 span = (SpanHead *)rowData;
-                x1 = span->x1;
+                x1 = ltoh16(span->x1);
                 if (x1 >= srcMax.x) {
                     rowData = rowEnd;
                     goto nextRow;
                 }
-                x2 = x1 + span->len;
+                x2 = x1 + ltoh16(span->len);
                 data = (const PIX *)(span + 1);
-                rowData += (sizeof(*span) + span->len*sizeof(PIX) + 3) & ~3;
+                rowData += (sizeof(*span) + ltoh16(span->len)*sizeof(PIX) + 3) & ~3;
             }
 
 nextRow:
@@ -379,8 +380,9 @@ nextRow:
 
             while (rowData < rowEnd) {
                 SpanHead *span = (SpanHead *)rowData;
-                memcpy(destRowPtr + span->x1, span + 1, span->len * sizeof(PIX));
-                rowData += (sizeof(*span) + span->len*sizeof(PIX) + 3) & ~3;
+                memcpy(destRowPtr + ltoh16(span->x1), span + 1,
+                    ltoh16(span->len) * sizeof(PIX));
+                rowData += (sizeof(*span) + ltoh16(span->len)*sizeof(PIX) + 3) & ~3;
             }
             assert(rowData == rowEnd);
             destRowPtr += dest.getStride();
@@ -490,9 +492,9 @@ void PackedSurface::bltBlend(Surface &dest, int destX, int destY, ColorTable &co
             for (;;) {
                 if (rowData >= rowEnd) goto nextRow;
                 span = (SpanHead *)rowData;
-                x1 = span->x1;
-                x2 = x1 + span->len;
-                rowData += (sizeof(*span) + span->len*sizeof(PIX) + 3) & ~3;
+                x1 = ltoh16(span->x1);
+                x2 = x1 + ltoh16(span->len);
+                rowData += (sizeof(*span) + ltoh16(span->len)*sizeof(PIX) + 3) & ~3;
                 if (x2 > srcMin.x) break;
             }
 
@@ -526,14 +528,14 @@ void PackedSurface::bltBlend(Surface &dest, int destX, int destY, ColorTable &co
 
                 if (rowData >= rowEnd) goto nextRow;
                 span = (SpanHead *)rowData;
-                x1 = span->x1;
+                x1 = ltoh16(span->x1);
                 if (x1 >= srcMax.x) {
                     rowData = rowEnd;
                     goto nextRow;
                 }
-                x2 = x1 + span->len;
+                x2 = x1 + ltoh16(span->len);
                 data = (const PIX *)(span + 1);
-                rowData += (sizeof(*span) + span->len*sizeof(PIX) + 3) & ~3;
+                rowData += (sizeof(*span) + ltoh16(span->len)*sizeof(PIX) + 3) & ~3;
             }
 
 nextRow:
@@ -550,9 +552,10 @@ nextRow:
             while (rowData < rowEnd) {
                 SpanHead *span = (SpanHead *)rowData;
 
-                bltBlendSpan(destRowPtr + span->x1, (const PIX *)(span + 1), span->len, cTable);
+                bltBlendSpan(destRowPtr + ltoh16(span->x1),
+                    (const PIX *)(span + 1), ltoh16(span->len), cTable);
 
-                rowData += (sizeof(*span) + span->len*sizeof(PIX) + 3) & ~3;
+                rowData += (sizeof(*span) + ltoh16(span->len)*sizeof(PIX) + 3) & ~3;
             }
             assert(rowData == rowEnd);
             destRowPtr += dest.getStride();
